After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 711013 - osxvideosink: fix missing selector name warning
osxvideosink: fix missing selector name warning
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other Mac OS
: Normal normal
: 1.3.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-10-28 14:16 UTC by Matthieu Bouron
Modified: 2013-10-28 14:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
osxvideosink: fix missing selector name warning (876 bytes, patch)
2013-10-28 14:17 UTC, Matthieu Bouron
none Details | Review
osxvideosink: fix missing selector name warnings (1.86 KB, patch)
2013-10-28 14:28 UTC, Matthieu Bouron
committed Details | Review

Description Matthieu Bouron 2013-10-28 14:16:34 UTC
Fix missing selector name warning when compiling with apple llvm 5.0 on osx >= 10.8.5.
Comment 1 Matthieu Bouron 2013-10-28 14:17:45 UTC
Created attachment 258307 [details] [review]
osxvideosink: fix missing selector name warning
Comment 2 Matthieu Bouron 2013-10-28 14:28:30 UTC
Created attachment 258309 [details] [review]
osxvideosink: fix missing selector name warnings
Comment 3 Olivier Crête 2013-10-28 14:41:02 UTC
commit d57b9628fc94bf22f3e5af75e5cda05bb37655e1
Author: Matthieu Bouron <matthieu.bouron@collabora.com>
Date:   Mon Oct 28 14:13:12 2013 +0000

    osxvideosink: fix missing selector name warnings
    
    The spaces matter in ObjC
    
    https://bugzilla.gnome.org/show_bug.cgi?id=711013