osxvideosink: fix missing selector name warnings

The spaces matter in ObjC

https://bugzilla.gnome.org/show_bug.cgi?id=711013